package org.switch2022.project.model;

public class RegisterAccountDTO {
    public String name;
    public String email;
    public String phone;
    public String photo;
}
