@startuml

skinparam linetype ortho

class RegisterAccountUI {}

class RegisterAccountController {
accountList : AccountList
profileList : ProfileList
registerAccount(registerAccountDTO)
}

class ProfileList {
}

class AccountList {
accountList : AccountList
addAccount (account)
registerAccount(registerAccountDTO, profile)
}

class Profile {
name: String
}

class RegisterAccountDTO {
name : String
email : String
phone : String
photo : String
}

class Account {
name : String
email : String
phone : String
photo : Photo
profile : Profile
isActive : boolean
}

RegisterAccountUI "1" o-- "1" RegisterAccountController
RegisterAccountController "1" o-- "1" ProfileList
RegisterAccountController ..> Profile
RegisterAccountController "1" o-- "1" AccountList
RegisterAccountController ..> RegisterAccountDTO
AccountList ..> RegisterAccountDTO
Account ..> Profile
AccountList "1" *-- "*" Account : has
ProfileList "1" *-- "*" Profile : has

@enduml